<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fafafa">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:src="@drawable/cselogo"
        android:contentDescription="@string/mainlogo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textColor="#000000"
        android:gravity="center_horizontal"
        android:textSize="25sp"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/imgLogo"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView" />

    <TextView
        android:text="@string/ps"
        android:textSize="7dp"
        android:textColor="#616161"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView4" />

</RelativeLayout>